// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] _accessKey="V" 1`] = `
<kol-combobox _value="Herr">
  <template shadowrootmode="open">
    <div class="has-value kol-combobox kol-form-field">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          Label
          <span aria-hidden="true" class="badge-text-hint">
            V
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <div class="kol-combobox__group">
              <input accesskey="V" aria-autocomplete="both" aria-controls="listbox" aria-expanded="false" aria-labelledby="id-nonce" autocapitalize="off" autocorrect="off" class="kol-combobox__input kol-input" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
              <button class="kol-custom-suggestions-toggle" tabindex="-1">
                <kol-icon _icons="codicon codicon-triangle-down" _label="kol-dropdown"></kol-icon>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-combobox>
`;

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] _alert=true 1`] = `
<kol-combobox _alert="" _value="Herr">
  <template shadowrootmode="open">
    <div class="has-value kol-combobox kol-form-field">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <div class="kol-combobox__group">
              <input aria-autocomplete="both" aria-controls="listbox" aria-expanded="false" aria-labelledby="id-nonce" autocapitalize="off" autocorrect="off" class="kol-combobox__input kol-input" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
              <button class="kol-custom-suggestions-toggle" tabindex="-1">
                <kol-icon _icons="codicon codicon-triangle-down" _label="kol-dropdown"></kol-icon>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-combobox>
`;

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] _disabled=true 1`] = `
<kol-combobox _value="Herr">
  <template shadowrootmode="open">
    <div class="has-value kol-combobox kol-form-field kol-form-field--disabled">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--disabled">
          <div class="kol-input-container__container">
            <div class="kol-combobox__group">
              <input aria-autocomplete="both" aria-controls="listbox" aria-expanded="false" aria-labelledby="id-nonce" autocapitalize="off" autocorrect="off" class="kol-combobox__input kol-input kol-input--disabled" disabled="" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
              <button class="kol-custom-suggestions-toggle" disabled="" tabindex="-1">
                <kol-icon _icons="codicon codicon-triangle-down" _label="kol-dropdown"></kol-icon>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-combobox>
`;

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] _hint="Hint" 1`] = `
<kol-combobox _value="Herr">
  <template shadowrootmode="open">
    <div class="has-value kol-combobox kol-form-field">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <div class="kol-combobox__group">
              <input aria-autocomplete="both" aria-controls="listbox" aria-describedby="id-nonce-hint" aria-expanded="false" aria-labelledby="id-nonce" autocapitalize="off" autocorrect="off" class="kol-combobox__input kol-input" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
              <button class="kol-custom-suggestions-toggle" tabindex="-1">
                <kol-icon _icons="codicon codicon-triangle-down" _label="kol-dropdown"></kol-icon>
              </button>
            </div>
          </div>
        </div>
      </div>
      <span class="kol-form-field__hint" id="id-nonce-hint">
        Hint
      </span>
    </div>
  </template>
</kol-combobox>
`;

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-combobox _value="Herr">
  <template shadowrootmode="open">
    <div class="has-value kol-combobox kol-form-field">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <kol-icon _icons="codicon codicon-codicon codicon-arrow-left" _label=""></kol-icon>
          </div>
          <div class="kol-input-container__container">
            <div class="kol-combobox__group">
              <input aria-autocomplete="both" aria-controls="listbox" aria-expanded="false" aria-labelledby="id-nonce" autocapitalize="off" autocorrect="off" class="kol-combobox__input kol-input" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
              <button class="kol-custom-suggestions-toggle" tabindex="-1">
                <kol-icon _icons="codicon codicon-triangle-down" _label="kol-dropdown"></kol-icon>
              </button>
            </div>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <kol-icon _icons="codicon codicon-codicon codicon-arrow-right" _label=""></kol-icon>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-combobox>
`;

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-combobox _value="Herr">
  <template shadowrootmode="open">
    <div class="has-value kol-combobox kol-form-field">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <kol-icon _icons="codicon codicon-codicon codicon-arrow-left" _label=""></kol-icon>
          </div>
          <div class="kol-input-container__container">
            <div class="kol-combobox__group">
              <input aria-autocomplete="both" aria-controls="listbox" aria-expanded="false" aria-labelledby="id-nonce" autocapitalize="off" autocorrect="off" class="kol-combobox__input kol-input" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
              <button class="kol-custom-suggestions-toggle" tabindex="-1">
                <kol-icon _icons="codicon codicon-triangle-down" _label="kol-dropdown"></kol-icon>
              </button>
            </div>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end"></div>
        </div>
      </div>
    </div>
  </template>
</kol-combobox>
`;

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-combobox _value="Herr">
  <template shadowrootmode="open">
    <div class="has-value kol-combobox kol-form-field">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start"></div>
          <div class="kol-input-container__container">
            <div class="kol-combobox__group">
              <input aria-autocomplete="both" aria-controls="listbox" aria-expanded="false" aria-labelledby="id-nonce" autocapitalize="off" autocorrect="off" class="kol-combobox__input kol-input" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
              <button class="kol-custom-suggestions-toggle" tabindex="-1">
                <kol-icon _icons="codicon codicon-triangle-down" _label="kol-dropdown"></kol-icon>
              </button>
            </div>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <kol-icon _icons="codicon codicon-codicon codicon-arrow-right" _label=""></kol-icon>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-combobox>
`;

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideMsg=true 1`] = `
<kol-combobox _hide-msg="" _value="Herr">
  <template shadowrootmode="open">
    <div class="has-value kol-combobox kol-form-field kol-form-field--hidden-msg">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <div class="kol-combobox__group">
              <input aria-autocomplete="both" aria-controls="listbox" aria-expanded="false" aria-labelledby="id-nonce" autocapitalize="off" autocorrect="off" class="kol-combobox__input kol-input" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
              <button class="kol-custom-suggestions-toggle" tabindex="-1">
                <kol-icon _icons="codicon codicon-triangle-down" _label="kol-dropdown"></kol-icon>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-combobox>
`;

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-combobox _value="Herr">
  <template shadowrootmode="open">
    <div class="has-value kol-combobox kol-form-field">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <div class="kol-combobox__group">
              <input aria-autocomplete="both" aria-controls="listbox" aria-expanded="false" aria-labelledby="id-nonce" autocapitalize="off" autocorrect="off" class="kol-combobox__input kol-input" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
              <button class="kol-custom-suggestions-toggle" tabindex="-1">
                <kol-icon _icons="codicon codicon-triangle-down" _label="kol-dropdown"></kol-icon>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-combobox>
`;

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] _readOnly=true 1`] = `
<kol-combobox _readonly="" _value="Herr">
  <template shadowrootmode="open">
    <div class="has-value kol-combobox kol-form-field">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <div class="kol-combobox__group">
              <input aria-autocomplete="both" aria-controls="listbox" aria-expanded="false" aria-labelledby="id-nonce" autocapitalize="off" autocorrect="off" class="kol-combobox__input kol-input" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
              <button class="kol-custom-suggestions-toggle" tabindex="-1">
                <kol-icon _icons="codicon codicon-triangle-down" _label="kol-dropdown"></kol-icon>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-combobox>
`;

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] _shortKey="S" 1`] = `
<kol-combobox _value="Herr">
  <template shadowrootmode="open">
    <div class="has-value kol-combobox kol-form-field">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          Label
          <span aria-hidden="true" class="badge-text-hint">
            S
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <div class="kol-combobox__group">
              <input aria-autocomplete="both" aria-controls="listbox" aria-expanded="false" aria-labelledby="id-nonce" autocapitalize="off" autocorrect="off" class="kol-combobox__input kol-input" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
              <button class="kol-custom-suggestions-toggle" tabindex="-1">
                <kol-icon _icons="codicon codicon-triangle-down" _label="kol-dropdown"></kol-icon>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-combobox>
`;

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] _touched=true 1`] = `
<kol-combobox _touched="" _value="Herr">
  <template shadowrootmode="open">
    <div class="has-value kol-combobox kol-form-field kol-form-field--touched">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <div class="kol-combobox__group">
              <input aria-autocomplete="both" aria-controls="listbox" aria-expanded="false" aria-labelledby="id-nonce" autocapitalize="off" autocorrect="off" class="kol-combobox__input kol-input kol-input--touched" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
              <button class="kol-custom-suggestions-toggle" tabindex="-1">
                <kol-icon _icons="codicon codicon-triangle-down" _label="kol-dropdown"></kol-icon>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-combobox>
`;

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] 1`] = `
<kol-combobox _value="Herr">
  <template shadowrootmode="open">
    <div class="has-value kol-combobox kol-form-field">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <div class="kol-combobox__group">
              <input aria-autocomplete="both" aria-controls="listbox" aria-expanded="false" aria-labelledby="id-nonce" autocapitalize="off" autocorrect="off" class="kol-combobox__input kol-input" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
              <button class="kol-custom-suggestions-toggle" tabindex="-1">
                <kol-icon _icons="codicon codicon-triangle-down" _label="kol-dropdown"></kol-icon>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-combobox>
`;
